flickering fix

--- a/app/app.css
+++ b/app/app.css
@@ -28,3 +28,7 @@
     max-height: 300px;
     overflow: scroll
 }
+
+[ng\:cloak], [ng-cloak], .ng-cloak {
+    display: none !important;
+}
